# tiny-index-sample

./: README.md  README.rst  pyproject.toml
tests/: test_tiny_index.py
tiny_index/: index.py
